--- a/public/js/partials/viewer.html
+++ b/public/js/partials/viewer.html
@@ -1,5 +1,6 @@
 <section id="viewer">
   <header class="row">
+    <div class="row"><img src="/imgs/njc-logo.png"/></div>
     <h1>Online FVIO for {{ vm.username }}</h1>
   </header>
   <main class="row">
