--- a/public/js/partials/login.html
+++ b/public/js/partials/login.html
@@ -1,4 +1,4 @@
-<div class="col-xs-10 col-sm-6 col-xs-push-1 col-sm-push-3">
+<div id="login" class="col-xs-12 col-sm-6 col-sm-push-3">
   <div class="row text-center"><img src="/imgs/njc-logo.png"/></div>
   <div class="row">
   </div>
