--- a/public/js/partials/pdf-viewer-template.html
+++ b/public/js/partials/pdf-viewer-template.html
@@ -1,15 +1,15 @@
 <section id="pdf-viewer">
   <div class="row">
     <div class="col-xs-12">
-      <button class="btn btn-default" ng-click="goPrevious()"><span class="fa fa-chevron-left"></span>&nbsp;Prev Page</span></button>
-      <button class="btn btn-default" ng-click="goNext()"><span class="fa fa-chevron-right"></span>&nbsp;Next page</span></button>
+      <button class="btn btn-default" ng-click="goPrevious()"><span class="fa fa-chevron-left"></span>&nbsp;<span class="hidden-xs">Prev Page</span></button>
+      <button class="btn btn-default" ng-click="goNext()"><span class="hidden-xs">Next page</span>&nbsp;<span class="fa fa-chevron-right"></span></button>
       &nbsp;|&nbsp;
       <button class="btn btn-default" ng-click="zoomIn()">+</span></button>
       <button class="btn btn-default" ng-click="fit()">100%</span></button>
       <button class="btn btn-default" ng-click="zoomOut()">-</span></button>
       &nbsp;|&nbsp;
-      <button class="btn btn-default" ng-click="print()"><span class="fa fa-print"></span>&nbsp;Print</span></button>
-      <button class="btn btn-default" ng-click="email()"><span class="fa fa-envelope"></span>&nbsp;Email</span></button>
+      <button class="btn btn-default" ng-click="print()"><span class="fa fa-print"></span>&nbsp;<span class="hidden-xs">Print</span></button>
+      <button class="btn btn-default" ng-click="email()"><span class="fa fa-envelope"></span>&nbsp;<span class="hidden-xs">Email</span></button>
     </div>
   </div>
   <div class="row">
