--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title="NJC Online"
     meta(name='viewport', content='width=device-width, initial-scale=1')
     // Favicons
     link(rel='apple-touch-icon', sizes='57x57', href='/apple-touch-icon-57x57.png')
