--- a/public/js/partials/viewer.html
+++ b/public/js/partials/viewer.html
@@ -1,7 +1,9 @@
 <section id="viewer">
   <header class="row">
-    <div class="row"><img src="/imgs/njc-logo.png"/></div>
-    <h1>Online FVIO for {{ vm.username }}</h1>
+    <div class="row text-center">
+      <img src="/imgs/njc-logo.png"/><br/>
+      <h1>Online FVIO for {{ vm.username }}</h1>
+    </div>
   </header>
   <main class="row">
     <div class="wrapper" ng-controller="PDFController">
