--- a/public/less/app.less
+++ b/public/less/app.less
@@ -32,6 +32,10 @@ Boostrap overrides
   }
 }
 
+footer {
+  display: none;
+}
+
 #login {
   padding-top:10em;
 }
@@ -52,4 +56,18 @@ Boostrap overrides
 
 .page-footer {
   margin-top:1em;
+}
+
+@media (max-width: 720px) {
+  html body.njc-efv {
+    font-size:10pt;
+  
+    h1 {
+      font-size:24px;
+    }
+
+    .btn {
+      font-size:smaller;
+    }
+  }
 }
