added the combined js script - testing to see if this fixes the IE11 issues

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,7 +34,7 @@ html
     script(type="text/javascript", src="/vendor/bootstrap/dist/js/bootstrap.min.js")
     script(type="text/javascript", src="/vendor/api-check/dist/api-check.min.js")
     script(type="text/javascript", src="/vendor/moment/min/moment.min.js")
-    script(type="text/javascript", src="/vendor/pdfjs-dist/build/pdf.js")
+    script(type="text/javascript", src="/vendor/pdfjs-dist/build/pdf.combined.js")
     script(type="text/javascript", src="/vendor/angular/angular.min.js")
     script(type="text/javascript", src="/vendor/angular-formly/dist/formly.min.js")
     script(type="text/javascript", src="/vendor/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.min.js")
