added loading icon + compression for express

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,6 +29,7 @@ html
     link(rel="stylesheet", href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='/vendor/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/bootstrap-additions/dist/bootstrap-additions.min.css')
+    link(rel='stylesheet', href='/vendor/angular-spinkit/build/angular-spinkit.min.css')
     script(type="text/javascript", src="/vendor/jquery/dist/jquery.min.js")
     script(type="text/javascript", src="/vendor/lodash/lodash.min.js")
     script(type="text/javascript", src="/vendor/bootstrap/dist/js/bootstrap.min.js")
@@ -37,6 +38,7 @@ html
     script(type="text/javascript", src="/vendor/pdfjs-dist/web/compatibility.js")
     script(type="text/javascript", src="/vendor/pdfjs-dist/build/pdf.combined.js")
     script(type="text/javascript", src="/vendor/angular/angular.min.js")
+    script(type="text/javascript", src="/vendor/angular-spinkit/build/angular-spinkit.min.js")
     script(type="text/javascript", src="/vendor/angular-formly/dist/formly.min.js")
     script(type="text/javascript", src="/vendor/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.min.js")
     script(type="text/javascript", src="/vendor/angular-animate/angular-animate.min.js")
