--- a/public/js/partials/pdf-viewer-template.html
+++ b/public/js/partials/pdf-viewer-template.html
@@ -14,6 +14,10 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
+      <div ng-if="loading" class="col-xs-4 col-xs-push-4 text-center">
+        <double-bounce-spinner></double-bounce-spinner>
+        <h2>Loading your document...</h2>
+      </div>      
       <canvas id="pdf-canvas"></canvas>
     </div>
   </div>
