--- a/public/less/app.less
+++ b/public/less/app.less
@@ -40,6 +40,46 @@ footer {
   padding-top:10em;
 }
 
+section {
+  .fake-pill {
+    background:#d9534f;
+    color:#fff;
+    border-radius:10%;
+    padding:0.2em 0.3em;
+    margin:0 0.25em 0.25em 0;
+    display:inline-block;
+  }
+
+  nav {
+    >div {
+      background:#0f2e1f;
+    }
+    color:#fff;
+
+    .left-nav {
+      position:relative;
+      top:0.25em;
+      ul li {
+        //border-right:dotted 0.1em #fff;
+        //&:last-of-type {border:none;}
+      }
+    }
+
+    ul {
+      margin:0.75em 0;
+      padding:0;
+      a {color:#fff;}
+      font-size:1.25em;
+      position:relative;
+      top:0.25em;
+      li {
+        display:inline-block;
+        padding-right:0.25em;
+      }
+    }
+  }
+}
+
 .entry {
   padding:2em;
   background:#fafafa;
@@ -61,7 +101,7 @@ footer {
 @media (max-width: 720px) {
   html body.njc-efv {
     font-size:10pt;
-  
+
     h1 {
       font-size:24px;
     }
