--- a/views/admin-layout.jade
+++ b/views/admin-layout.jade
@@ -35,8 +35,8 @@ html
     script(type="text/javascript", src="/vendor/bootstrap/dist/js/bootstrap.min.js")
     script(type="text/javascript", src="/vendor/api-check/dist/api-check.min.js")
     script(type="text/javascript", src="/vendor/moment/min/moment.min.js")
-    script(type="text/javascript", src="/vendor/pdfjs-dist/web/compatibility.js")
-    script(type="text/javascript", src="/vendor/pdfjs-dist/build/pdf.combined.js")
+    //script(type="text/javascript", src="/vendor/pdfjs-dist/web/compatibility.js")
+    //script(type="text/javascript", src="/vendor/pdfjs-dist/build/pdf.combined.js")
     script(type="text/javascript", src="/vendor/angular/angular.min.js")
     script(type="text/javascript", src="/vendor/angular-spinkit/build/angular-spinkit.min.js")
     script(type="text/javascript", src="/vendor/angular-formly/dist/formly.min.js")
@@ -53,9 +53,9 @@ html
     script(type="text/javascript", src="/vendor/angular-social-links/angular-social-links.js")
     script(type="text/javascript", src="/js/modules.js")
     script(type="text/javascript", src="/js/admin-app.js")
-    //script(type="text/javascript", src="/js/controllers/login.controller.js")
-    //script(type="text/javascript", src="/js/controllers/viewer.controller.js")
-    //script(type="text/javascript", src="/js/controllers/pdf.controller.js")
+    script(type="text/javascript", src="/js/data.service.js")
+    script(type="text/javascript", src="/js/controllers/admin.controller.js")
+    script(type="text/javascript", src="/js/controllers/view-order.controller.js")
   body.njc-efv
     .container(ng-app="njcEfvApp")
       block content
