--- a/public/less/app.less
+++ b/public/less/app.less
@@ -1,7 +1,7 @@
 /******************************
 Boostrap overrides
 *******************************/
-.njc-comms {
+.njc-efv {
   .form-control, select, input, textarea, button {
     border-radius:0;
   }
