--- a/views/admin-layout.jade
+++ b/views/admin-layout.jade
@@ -55,6 +55,7 @@ html
     script(type="text/javascript", src="/js/admin-app.js")
     script(type="text/javascript", src="/js/data.service.js")
     script(type="text/javascript", src="/js/controllers/admin.controller.js")
+    script(type="text/javascript", src="/js/controllers/sms-order.controller.js")
     script(type="text/javascript", src="/js/controllers/view-order.controller.js")
   body.njc-efv
     .container(ng-app="njcEfvApp")
